--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/express": "^5.0.2",
-    "@types/node": "^22.15.20",
+    "@types/express-rate-limit": "^6.0.2",
+    "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.15.21",
     "jest": "^29.7.0",
     "supertest": "^7.1.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
