Fix type errors and reconfigure build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,12 @@
     "module": "commonjs",
     "rootDir": "src",
     "outDir": "dist",
+    "types": ["node"],
+    "moduleResolution": "node",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "scripts"]
