--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^5.0.2",
     "@types/express-rate-limit": "^6.0.2",
     "@types/helmet": "^4.0.0",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.15.21",
     "jest": "^29.7.0",
