--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "@types/node": "^22.15.21"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
